[build-system]
requires = ["setuptools>=65.0",
            "PyYAML>=6.0",
            "ipython>=8.13.2",
            "defusedxml>=0.7.1"]
build-backend = "setuptools.build_meta"

[project]
name = "ztron"
version = "1.1.0"
authors = [
  { name="Joe Bostian", email="jbostian@us.ibm.com" },
]
description = "Lightweight command automation for z/OS"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2 License",
    "Operating System :: POSIX :: Other",
]

[project.urls]
"Homepage" = "https://github.com/ambitus/zTron"
"Bug Tracker" = "https://github.com/ambitus/zTron"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ztron"]
namespaces = false

[project.scripts]
ztron = "ztron.ztron:run"