[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ztron"
version = "1.0.b1"
authors = [
  { name="Joe Bostian", email="jbostian@us.ibm.com" },
]
maintainers = [
  { name="Joe Bostian", email="jbostian@us.ibm.com" },
]
description = "Build a requirements.txt from a specified repository"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache 2 License",
    "Operating System :: POSIX :: Other",
]
# dependencies = [
#     "jupyter>=1.1.0"
# ]

[project.urls]
"Homepage" = "https://github.com/ambitus/zTron"
"Bug Tracker" = "https://github.com/ambitus/zTron/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["ztron"]
namespaces = false

[project.scripts]
stockpyle = "main:main_cli"